--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,23 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
   </head>
   <body>
+    
+    <div class="container-fluid">
+      <div class="row">
+        <div class="navbar navbar-dark bg-dark">
+          <span class="navbar-brand mb-0 h1">UGameToken platform</span>
+        </div>
+      </div>
+      <div class="row"> 
+        <div id="matches" class="col-lg-12">
+
+        </div>
+      </div>
+    </div>
     <div class="container" style="width: 650px;">
       <div class="row">
         <div class="col-lg-12">
-            <h1 class="text-center">DAPP TOKEN ICO SALE</h1>
+            <h1 class="text-center">UGT TOKEN SALE</h1>
             <hr/>
             <br/>
         </div>
@@ -21,8 +34,8 @@
         </div>
         <div id="content" class="text-center" style="display: none;">
           <p>
-            Introducing "DApp Token" (DAPP)!
-            Token price is <span class="token-price"></span> Ether. You currently have <span class="dapp-balance"></span>&nbsp;DAPP.
+            Introducing "UGameToken" (UTG)!
+            Token price is <span class="token-price"></span> Ether. You currently have <span class="dapp-balance"></span>&nbsp;UTG.
           </p>
           <br/>
           <form onSubmit="App.buyTokens(); return false;" role="form">
@@ -45,7 +58,7 @@
           <hr>
           <p id="accountAddress"></p>
         </div>
-      </div>
+      </div>   
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
